--- a/core-web/WebContent/pages/about.html
+++ b/core-web/WebContent/pages/about.html
@@ -22,7 +22,7 @@
 			</td>
 			<td align="left">
 				<font size='2'>				
-				<b><font color="#041431">祈-qífú 0.1 version</font></b><BR>
+				<b><font color="#041431">祈-qífú-2 0.2 version</font></b><BR>
 				<hr size="1" width="90%"/>
 				Developer: Bill Chen / Chen Xin Nien<BR>
 				Contact: <a href="mailto:chen.xin.nien@gmail.com">chen.xin.nien@gmail.com</a><BR>
