--- a/core-web/WebContent/pages/about.html
+++ b/core-web/WebContent/pages/about.html
@@ -23,6 +23,7 @@ body {
 <br/>
 				
 <div class="card" style="width: 100%">
+  <h5 class="card-header">About</h5>
   <div class="card-body">
     <h5 class="card-title">祈-qífú-2 0.2 version</h5>
     
